--- a/ik.html
+++ b/ik.html
@@ -19,22 +19,36 @@
 <body>
 	<script src="js/three.min.js"></script>
 	<script>
+		window.addEventListener('mousemove', onMouseMove, false);
+
+		var mouse = new THREE.Vector3(0, -1, 5);
+
+		function onMouseMove(event) {
+
+			// calculate mouse position in normalized device coordinates
+			// (-1 to +1) for both components
+			mouse.x = ((event.clientX / window.innerWidth) * 2 - 1) * 5;
+			mouse.y = (-(event.clientY / window.innerHeight) * 2 + 1) * 5;
+
+		}
+
+		window.addEventListener( 'mousemove', onMouseMove, false );
+
+
 
 		function updateIK(geometryNode, point) {
-			if(geometryNode.children.length > 4) {
+			if (geometryNode.children.length > 4) {
 				geometryNode.parent.updateMatrixWorld();
 				geometryNode.updateMatrixWorld();
 				updateIK(geometryNode.children[4].children[0], point);
 			}
 
 			let subtractVector = new THREE.Vector3();
-			geometryNode.parent.updateMatrixWorld();
-			geometryNode.updateMatrixWorld();
-			console.log(geometryNode.children[0].geometry.vertices[1]);
-			console.log(geometryNode.children[0].geometry.vertices[2]);
+
+
 			var vectorA = geometryNode.children[0].geometry.vertices[1].clone();
 			var vectorB = geometryNode.children[0].geometry.vertices[2].clone();
-			console.log(geometryNode.matrixWorld)
+
 			vectorA.applyMatrix4(geometryNode.matrixWorld)
 			vectorB.applyMatrix4(geometryNode.matrixWorld)
 
@@ -45,15 +59,19 @@
 			subtractVector = subtractVectorTwo.subVectors(vectorA, point);
 			let expectedDirection = subtractVectorTwo.normalize();
 
-			let theta = Math.acos(currDirection.dot(expectedDirection))
-
 			//rotation transformations
+			let rota = Math.atan2(currDirection.y, currDirection.x)
+			if (isNaN(rota)) {
+				theta = 0;
+			}
+			let rotb = Math.atan2(expectedDirection.y, expectedDirection.x)
+			if (isNaN(rotb)) {
+				theta = 0;
+			}
+			let theta = rotb - rota;
 
 
-
-
-			console.log(theta)
-			geometryNode.rotateZ(theta)
+			geometryNode.rotateZ(theta * 0.1)
 			//group.rotateOnAxis(new THREE.Vector3(0, 0, 1), theta);
 
 		}
@@ -63,12 +81,12 @@
 		var material = new THREE.LineBasicMaterial({
 			color: 0xffffff
 		});
-		const MINI = 2.0/(1 + Math.sqrt(3.0));
+		const MINI = ((2.0/3.0) / (1 + Math.sqrt(3.0)));
 		const LARGE = MINI * Math.sqrt(3.0);
 
 
-		const boneCount = 4;
-		const boneLength = LARGE;
+		const boneCount = 12;
+		const boneLength = LARGE/3;
 		let lastGroup = null;
 		var root = new THREE.Group();
 		for (let i = 0; i < boneCount; ++i) {
@@ -85,8 +103,8 @@
 
 			//let vecBRight  = new THREE.Vector3(MINI, START - (i * (2.0 - MINI)), -5);
 			//let vecBLeft  = new THREE.Vector3(-1 * MINI, START - (i * (2.0 - MINI)), -5);
-			let vecBRight  = new THREE.Vector3(MINI, 0, 0);
-			let vecBLeft  = new THREE.Vector3(-1 * MINI, 0, 0);
+			let vecBRight = new THREE.Vector3(MINI, 0, 0);
+			let vecBLeft = new THREE.Vector3(-1 * MINI, 0, 0);
 
 
 			var middleGeometry = new THREE.Geometry();
@@ -117,7 +135,7 @@
 
 			var translateNode;
 
-			if(i!=0) {
+			if (i != 0) {
 				translateNode = new THREE.Group();
 				translateNode.translateY(-1 * LARGE);
 			} else {
@@ -126,7 +144,7 @@
 			}
 			translateNode.add(geometryNode);
 
-			if(lastGroup !=null) {
+			if (lastGroup != null) {
 				lastGroup.add(translateNode);
 			}
 			lastGroup = geometryNode;
@@ -144,14 +162,19 @@
 
 
 
-
 		var renderer = new THREE.WebGLRenderer();
 		renderer.setSize(window.innerWidth, window.innerHeight);
 
+
 		function animate() {
-			updateIK(root.children[0], new THREE.Vector3(-2, -4 , -5));
-			requestAnimationFrame( animate );
-			renderer.render( scene, camera );
+
+		//	setTimeout( function() {
+				updateIK(root.children[0], mouse);
+				requestAnimationFrame(animate);
+
+		//	}, 1000 / 20 );
+
+			renderer.render(scene, camera);
 
 		}
 		animate();
